--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section id="home">
         <div class="about-me">
-            <img src="file:///D:/Portfolio/Professional_pic.jpg" alt="My Photo">
+            <img src="Professional_pic.jpg" alt="My Photo">
             <div class="intro">
                 <h1>About Me</h1>
                 <p>Hello! I'm Vamsi, an aspiring computer science engineer with a passion for full-stack development. I enjoy building web applications and enhancing user experiences.</p>
@@ -111,7 +111,7 @@
                 <i class="fab fa-whatsapp icon"></i>
             </a>
         </div>
-        <a href="D:/Resumes/Vamsi_ResumeM.pdf" download class="download-button">Download My Resume 📄</a>
+        <a href="Vamsi_ResumeM.pdf" download class="download-button">Download My Resume 📄</a>
     </section>
     
     
