--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <h2>Connect with Me</h2>
                 <div class="icons">
                     <a href="https://www.linkedin.com/in/vamsi34/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-                    <a href="https://www.instagram.com/vamsi34/profilecard/?igsh=MTEzb2JxMXRxa2w1bw==" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                    <a href="https://www.instagram.com/_vamsi34_/profilecard/?utm_source=qr&igsh=MTEzb2JxMXRxa2w1bw%3D%3D" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
                     <a href="https://wa.me/917989619205" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a>
                 </div>
                 <div class="resume-download">
