--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Vamsi. All rights reserved.</p>
+        <p>Made with ❤️ </p>
+        <p>&copy; 2024 Vamsi. All rights reserved.</p> 
+        
     </footer>
 
     <script src="script.js"></script>
