--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="contact-details">
                 <h2>Contact Information</h2>
                 <p><strong>Name:</strong> Vamsi M</p>
-                <p><strong>Address:</strong> Sobbbala, Gampalagudem Mandal, NTR District, AP</p>
+                <p><strong>Address:</strong> Sobbala, Gampalagudem Mandal, NTR District, AP</p>
                 <p><strong>Mobile:</strong> +91-7989619205</p>
                 <p><strong>Email:</strong> <a href="mailto:vamsimangalagiri34@gmail.com">vamsim7989@gmail.com</a></p>
             </div>
