--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
+                <li>React Js</li>
                 <li>Java</li>
                 <li>Python</li>
                 <li>SQL</li>
@@ -84,6 +85,7 @@
             <li>Web Development - edX</li>
             <li>JavaScript - LinkedIn</li>
             <li>SQL - LinkedIn</li>
+            <li>React Js</li>
             <li>Git and GitHub - edX</li>
         </ul>
     </section>
