--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <li>Web Development - edX</li>
             <li>JavaScript - LinkedIn</li>
             <li>SQL - LinkedIn</li>
-            <li>React Js</li>
+            <li>React Js - Infosys Springboard</li>
             <li>Git and GitHub - edX</li>
         </ul>
     </section>
